write tests for auth hdls
